Create User tests and refactoring
